Bug 145225 - EDITING tracked moving of list item over an other list item with tracked insertion of a paragraph mark sets the other item to a tracked insertion
Summary: EDITING tracked moving of list item over an other list item with tracked inse...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks: Track-Changes-Lists
  Show dependency treegraph
 
Reported: 2021-10-19 14:07 UTC by NISZ LibreOffice Team
Modified: 2021-11-04 09:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (10.06 KB, application/vnd.oasis.opendocument.text)
2021-10-19 14:11 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer (6.03 KB, image/png)
2021-10-19 14:11 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-10-19 14:07:35 UTC
Description:
With change tracking, insert a new row in the middle of the list, and then move another list item over the row that ended with the new row. 

Steps to Reproduce:
1.	Oped the document.
2.	Insert a row in the middle of the list.
3.	Move up the item below above two.


Actual Results:
What went through item also became a change.

Expected Results:
Passed item must remain original.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 9bcdfcb74dae7ccd07be7159c0e1deba110d2a6f
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 1 NISZ LibreOffice Team 2021-10-19 14:11:10 UTC
Created attachment 175835 [details]
Example file from Writer
Comment 2 NISZ LibreOffice Team 2021-10-19 14:11:51 UTC
Created attachment 175836 [details]
Screenshot of the problem in Writer
Comment 3 Commit Notification 2021-10-26 13:02:54 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4c982dbafdac900e233d7b68d95c9c99244defc1

tdf#145225 sw track changes: fix bad insert at moving

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2021-11-04 09:44:43 UTC
Verified in:
Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: c7500945fc5d5bd2130a2d38be0bd4b15445cd90
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL