tdf#145225 sw track changes: fix bad insert at moving

Moving up a list item over a tracked paragraph insertion
changed non-tracked text to tracked insertion.

Manual test:

- Create a 3-element list;
- switch on Record Changes and Show Changes;
- at the end of the list item 2, press Enter to insert a
  new list item, and type some text:

Item 1
Item 2[
New item]
Item 3

  where parenthesis shows the boundaries of the tracked
  insertion;

- move up the last list item over list item 2 (the unmodified
  paragraph text with a tracked paragraph insertion at the
  end).

Paragraph text before the tracked paragraph insertion
changed to tracked insertion joining its tracked insertion
with the moved list item, resulting only 2 tracked changes:

Item 1
[Item 3
Item 2
New item]
[Item 3]

instead of the requested 3 changes:

Item 1
[Item 3]
Item 2[
New item]
[Item 3]

Change-Id: I4716b2d244b57cf86d7d14d972452191549f5fea